2006-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bigfloat.test: Fixed use of duplicate test names.
	* calculus.test: 
	* linalg.test: 
	* statistics.test: 

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bessel.test: More boilerplate simplified via use of test support.
	* bigfloat.test:
	* bigfloat2.test:
	* bignum.test: 
	* calculus.test: 
	* combinatorics.test: 
	* constants.test: 
	* elliptic.test: 
	* fourier.test: 
	* fuzzy.test: 
	* geometry.test: 
	* interpolate.test: 
	* linalg.test: 
	* math.test: 
	* optimize.test: 
	* polynomials.test: 
	* qcomplex.test: 
	* roman.test: 
	* special.test: 
	* statistics.test: 

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bessel.test: Hooked into the new common test support code.
	* bigfloat.test:
	* bigfloat2.test:
	* bignum.test: 
	* calculus.test: 
	* combinatorics.test: 
	* constants.test: 
	* elliptic.test: 
	* fourier.test: 
	* fuzzy.test: 
	* geometry.test: 
	* interpolate.test: 
	* linalg.test: 
	* math.test: 
	* optimize.test: 
	* polynomials.test: 
	* qcomplex.test: 
	* roman.test: 
	* special.test: 
	* statistics.test: 

2006-01-11  Andreas Kupries <andreask@activestate.com>

	* fourier.tcl (::math::fourier::lowpass):  Changed package
	* fourier.tcl (::math::fourier::highpass): reference
	  "complexnumbers" to the correct "math::complexnumbers".

2006-01-10  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * linalg.tcl: Fixed bug in procedure angle
                      Added a procedure crossproduct
        * linalg.man: Added documentation on crossproduct

2005-11-13  Stephane Arnold <sarnold75@users.sourceforge.net>

        * bigfloat2.tcl : bug fix in trigonometry, functions may have
          return a number more precise than the input
        * bignum.tcl : a little performance enhancement by avoiding
          the use of [upvar] in [_treat]
        * bigfloat2.test : minor changes